<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/brewery_navigation_graph"
    app:startDestination="@id/breweriesFragment">

    <fragment
        android:id="@+id/breweriesFragment"
        android:name="com.example.restaurantsfinder.breweries.FragmentBreweries"
        android:label="@string/menu_breweries"
        tools:layout="@layout/fragment_breweries">

        <action
            android:id="@+id/navigateFromBreweriesToDetails"
            app:destination="@id/breweryDetails"
            app:enterAnim="@anim/nav_default_enter_anim"
...
